# ZITI-start_project

./: README.md
doc/images/: OrderService.drawio  SkiCardService.drawio  UserService.drawio
services/: docker-compose.yml  postman_collection.json
services/MessagingService/: .env  Dockerfile  Makefile  go.mod  go.sum  main.go  messaging.proto
services/MessagingService/messaging/: messaging.pb.go
services/MobileGateway/: .env  Dockerfile  main.py  pyproject.toml  test_main.py
services/OrderService/: Dockerfile  README.md  pom.xml
services/OrderService/src/docker/: Dockerfile.jvm
services/SkiCardService/: .env  Dockerfile  go.mod  go.sum  main.go
services/SkiCardService/config/: db.go
services/SkiCardService/handlers/: helpers.go  physcial_card_handler.go  ski_cards_handler.go
services/SkiCardService/messaging/: messaging.pb.go  messaging_grpc.pb.go
services/SkiCardService/models/: physical_card.go  ski_card.go
services/SkiCardService/routes/: physical_card_routes.go  ski_cards_routes.go
services/SkiCardService/tests/: api_test.go
services/UserService/: Dockerfile  pom.xml
services/WebGateway/: Dockerfile  main.py  pyproject.toml  test_main.py
web/: docker-compose.yml
web/profile/: Dockerfile  package-lock.json  package.json  webpack.config.js
web/profile/src/: App.tsx
web/serve/: Dockerfile  cypress.config.ts  package-lock.json  package.json  webpack.config.js
web/serve/src/: App.tsx  index.html
web/skicards/: Dockerfile  package-lock.json  package.json  webpack.config.js
web/skicards/src/: App.tsx  index.html
(+41 files in other folders)
